tests/rosetta/transpiler/C/brilliant-numbers.c
// Generated by Mochi 0.10.32 on 2025-08-05 02:43 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t primesUpTo_len;
size_t sortInts_len;

size_t _slice_int_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

static long long* _slice_int(const long long *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    long long *res = NULL;
    if (n) {
        res = malloc(n * sizeof(long long));
        memcpy(res, arr + start, n * sizeof(long long));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;

struct Anon1 {
    int bc;
    long long next;
};

struct Anon2 {
    int bc;
    long long next;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long *primes = NULL;
size_t primes_len = 0;

long long * primesUpTo(long long n);
long long * sortInts(long long * xs, size_t xs_len);
const char* commatize(long long n);
Anon2 getBrilliant(long long digits, long long limit, int countOnly);
void user_main();
int main(void);

long long * primesUpTo(long long n) {
    int *sieve = NULL;
    size_t sieve_len = 0;
    long long i = 0LL;
    while (i <= n) {
        sieve = list_append_long_long(sieve, &sieve_len, 1LL);
        i = i + 1LL;
    }
    long long p = 2LL;
    while ((p * p) <= n) {
        if (sieve[(int)(p)]) {
            long long m = p * p;
            while (m <= n) {
                sieve[(int)(m)] = 0LL;
                m = m + p;
            }
        }
        p = p + 1LL;
    }
    long long *res = NULL;
    size_t res_len = 0;
    long long x = 2LL;
    while (x <= n) {
        if (sieve[(int)(x)]) {
            res = list_append_int(res, &res_len, x);
        }
        x = x + 1LL;
    }
    return primesUpTo_len = res_len, res;
}

long long * sortInts(long long * xs, size_t xs_len) {
    long long *res = NULL;
    size_t res_len = 0;
    long long *tmp = xs;
    size_t tmp_len = xs_len;
    while (tmp_len > 0LL) {
        long long min = tmp[(int)(0LL)];
        long long idx = 0LL;
        long long i = 1LL;
        while (i < tmp_len) {
            if (tmp[(int)(i)] < min) {
                min = tmp[(int)(i)];
                idx = i;
            }
            i = i + 1LL;
        }
        res = list_append_long_long(res, &res_len, min);
        long long *out = NULL;
        size_t out_len = 0;
        long long j = 0LL;
        while (j < tmp_len) {
            if (j != idx) {
                out = list_append_long_long(out, &out_len, tmp[(int)(j)]);
            }
            j = j + 1LL;
        }
        tmp = out;
    }
    return sortInts_len = res_len, res;
}

const char* commatize(long long n) {
    const char* s = str_int(n);
    long long i = strlen(s) - 3LL;
    while (i >= 1LL) {
        s = str_concat(str_concat(_substring(s, 0LL, i), ","), _substring(s, i, strlen(s)));
        i = i - 3LL;
    }
    return s;
}

Anon2 getBrilliant(long long digits, long long limit, int countOnly) {
    long long *brilliant = NULL;
    size_t brilliant_len = 0;
    long long count = 0LL;
    long long pow = 1LL;
    long long next = 999999999999999LL;
    long long k = 1LL;
    while (k <= digits) {
        long long *s = NULL;
        size_t s_len = 0;
        for (size_t __i = 0; __i < primes_len; __i++) {
            long long p = primes[__i];
            if (p >= (pow * 10LL)) {
                break;
            }
            if (p > pow) {
                s = list_append_int(s, &s_len, p);
            }
        }
        long long i = 0LL;
        while (i < s_len) {
            long long j = i;
            while (j < s_len) {
                long long prod = s[(int)(i)] * s[(int)(j)];
                if (prod < limit) {
                    if (countOnly) {
                        count = count + 1LL;
                    } else {
                        brilliant = list_append_int(brilliant, &brilliant_len, prod);
                    }
                } else {
                    if (prod < next) {
                        next = prod;
                    }
                    break;
                }
                j = j + 1LL;
            }
            i = i + 1LL;
        }
        pow = pow * 10LL;
        k = k + 1LL;
    }
    if (countOnly) {
        return (Anon2){.bc = count, .next = next};
    }
    return (Anon2){.bc = brilliant, .next = next};
}

void user_main() {
    puts("First 100 brilliant numbers:");
    Anon2 r = getBrilliant(2LL, 10000LL, 0LL);
    long long *br = sortInts(r.bc, r.bc_len);
    size_t br_len = sortInts_len;
    br = _slice_int(br, br_len, 0LL, 100LL, &(_slice_int_len));
    br_len = _slice_int_len;
    long long i = 0LL;
    while (i < br_len) {
        printf("%s %d\n", str_concat(str_int(br[(int)(i)]), " "), 0LL);
        if (((i + 1LL) % 10LL) == 0LL) {
            printf("%s %d\n", "", 1LL);
        }
        i = i + 1LL;
    }
    printf("%s %d\n", "", 1LL);
    long long k = 1LL;
    while (k <= 13LL) {
        long long limit = pow(10LL, k);
        Anon2 r2 = getBrilliant(k, limit, 1LL);
        long long total = r2.bc;
        long long next = r2.next;
        const char* climit = commatize(limit);
        const char* ctotal = commatize(total + 1LL);
        const char* cnext = commatize(next);
        puts(str_concat(str_concat(str_concat(str_concat(str_concat("First >= ", climit.padStart), " is "), ctotal.padStart), " in the series: "), cnext.padStart));
        k = k + 1LL;
    }
}

int main(void) {
    {
        long long __start = _now();
        primes = primesUpTo(3200000LL);
        primes_len = primesUpTo_len;
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
